# blog_app

./: .gitignore  Cargo.toml  Dockerfile  Rocket.test.toml  Rocket.toml.example  docker-compose.yml  tailwind.config.js
.github/: Rocket.test.toml
.github/workflows/: rust.yml
docker_resources/: Rocket.toml
migrations/2024-04-10-095141_create_posts/: up.sql
migrations/2024-04-11-045431_create_users/: up.sql
migrations/2024-04-11-111339_add_user_id_to_posts/: up.sql
migrations/2024-04-13-100730_add_password_to_user/: down.sql  up.sql
migrations/2024-04-16-150522_add_timestamp_to_posts/: down.sql  up.sql
public/css/: main.css  main.out.css
public/js/: editor.js  index.js  modal.js
public/js/tinymce/themes/silver/: theme.min.js
src/: catchers.rs  config.rs  helpers.rs  lib.rs  main.rs  models.rs  routes.rs  schema.rs
src/models/: posts.rs  user_tests.rs  users.rs
src/routes/: auth.rs  posts.rs  users.rs
templates/: error.html.tera  index.html.tera
templates/auth/: login.html.tera
templates/errors/: internal_server_error.html.tera  not_found.html.tera
templates/layouts/: main.html.tera
templates/posts/: edit.html.tera  index.html.tera  new.html.tera  show.html.tera
templates/users/: index.html.tera  new.html.tera  profile.html.tera
