[package]
name = "blog_web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0" }
diesel = { version = "2.1.0", features = ["mysql"] }
serde = { version = "1.0.197" }

[dependencies.rocket_dyn_templates]
version = "0.1.0"
features = ["handlebars", "tera"]

[dependencies.rocket_db_pools]
version = "0.1.0"
features = ["diesel_mysql"]
