[package]
name = "blog_web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0", features = ["secrets"] }
diesel = { version = "2.1.0", features = ["mysql", "chrono"] }
serde = { version = "1.0.197" }
rand = "0.8.5"
argon2 = "0.5.3"
serde_json = "1.0.115"
chrono = { version = "0.4.38", features = ["serde"] }
html_parser = "0.7.0"
scraper = "0.19.0"

[dependencies.rocket_dyn_templates]
version = "0.1.0"
features = ["handlebars", "tera"]

[dependencies.rocket_db_pools]
version = "0.1.0"
features = ["diesel_mysql"]
